Made Changes in the Backend for user created Date and user status, also made Navbar responsive